--- a/app/src/main/res/layout/flag_item.xml
+++ b/app/src/main/res/layout/flag_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:background="#ffffff"
         android:layout_margin="4dp">
@@ -18,6 +18,12 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4">
+<!--        <CheckBox-->
+<!--                android:id="@+id/flag_choose"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent">-->
+
+<!--        </CheckBox>-->
         <ImageView
                 android:id="@+id/flag_icon"
                 android:layout_width="0dp"
@@ -56,14 +62,14 @@
 
     </LinearLayout>
 
-    <Button
-            android:id="@+id/flag_delete"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:background="@mipmap/ic_cancel"
-            android:gravity="center"
-            android:layout_weight="0.5"
-            android:scaleX="0.5"
-            android:scaleY="0.45"
-            />
+<!--    <Button-->
+<!--            android:id="@+id/flag_delete"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:background="@mipmap/ic_cancel"-->
+<!--            android:gravity="center"-->
+<!--            android:layout_weight="0.5"-->
+<!--            android:scaleX="0.5"-->
+<!--            android:scaleY="0.45"-->
+<!--            />-->
 </LinearLayout>
