--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,18 @@
         <item name="android:windowEnterAnimation">@anim/translate</item>
     </style>
 
-</resources>
+    <style name="Button_Login" parent="Widget.AppCompat.Button">
+        <item name="android:background">@color/night</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        </style>
+
+
+    </resources>
