--- a/app/src/main/res/layout/activity_show_web_image.xml
+++ b/app/src/main/res/layout/activity_show_web_image.xml
@@ -5,17 +5,18 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:gravity="center">
-
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="400dp">
     <ImageView
         android:id="@+id/show_webimage_imageview"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:scaleType="matrix"
         android:layout_gravity="center"
         android:gravity="center_horizontal"
-
          />
-
+</LinearLayout>
     <LinearLayout
         android:layout_weight="7.5"
         android:layout_width="fill_parent"
@@ -38,11 +39,18 @@
             android:text="保存"
             />
         <Button
-            android:id="@+id/btn_cut"
+            android:id="@+id/btn_back"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="裁剪"
+            android:text="上一张"
+            />
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="下一张"
             />
     </LinearLayout>
 
