--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -43,6 +43,7 @@
         android:paddingLeft="8dp"
         android:textColorHint="#000000"
             />
+
     <EditText
             android:id="@+id/id_re_username"
             android:layout_width="match_parent"
@@ -50,6 +51,28 @@
             android:layout_marginTop="4dp"
             android:inputType="text"
             android:hint="请输入用户名"
+            android:background="#ffffff"
+            android:paddingLeft="8dp"
+            android:textColorHint="#000000"
+            />
+    <EditText
+            android:id="@+id/id_re_email"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginTop="4dp"
+            android:inputType="textEmailAddress"
+            android:hint="请输入邮箱"
+            android:background="#ffffff"
+            android:paddingLeft="8dp"
+            android:textColorHint="#000000"
+            />
+    <EditText
+            android:id="@+id/id_re_userpic"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginTop="4dp"
+            android:inputType="text"
+            android:hint="请输入头像地址"
             android:background="#ffffff"
             android:paddingLeft="8dp"
             android:textColorHint="#000000"
