--- a/app/src/main/res/layout/popuplayout.xml
+++ b/app/src/main/res/layout/popuplayout.xml
@@ -51,9 +51,10 @@
 
                 </ImageView>
                 <TextView
+                        android:id="@+id/user_name"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
                         android:paddingTop="25dp"
                         android:text="用户名"
                         android:textSize="20sp"
@@ -64,14 +65,14 @@
             </LinearLayout>
 
             <View
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     />
             <ImageView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1.5"
+                    android:layout_weight="1"
                     android:src="@mipmap/ic_chat"
                     android:scaleX="0.32"
                     android:scaleY="0.32">
